# weather-test

./: .bandit  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  pytest.ini  setup.cfg
scripts/: lint.sh
shipwell_test/: asgi.py  settings.py  urls.py  wsgi.py
shipwell_test/core/: apps.py  urls.py
shipwell_test/core/api/v1/: serializers.py  views.py
shipwell_test/core/services/: accuweather_service.py  base_service.py  client.py  noaa_service.py  weatherdotcom_service.py
shipwell_test/custom_auth/: admin.py  apps.py  managers.py  models.py
shipwell_test/custom_auth/migrations/: 0001_initial.py
tests/custom_auth/: test_managers.py
